next-tavla/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --main-background-color: var(--colors-brand-white);
        --secondary-background-color: var(--colors-greys-grey80);
        --tertiary-background-color: var(--colors-blues-blue60);

        --main-text-color: var(--colors-misc-black);
        --secondary-text-color: var(--colors-greys-grey60);

        --primary-button-color: var(--colors-brand-blue);
        --primary-button-hover-color: var(--colors-blues-blue20);

        --border-color: var(--colors-greys-grey60);
        --warning-color: var(--colors-validation-lava);

        --table-border-color: var(--colors-greys-grey60);
        --table-situation-color: var(--colors-misc-black);
        --table-estimated-time-color: var(--colors-brand-coral);

        --table-transport-metro-color: var(--colors-transport-default-metro);
        --table-transport-bus-color: var(--colors-transport-default-bus);
        --table-transport-tram-color: var(--colors-transport-default-tram);
        --table-transport-funicular-color: var(
            --colors-transport-default-funicular
        );
        --table-transport-cableway-color: var(
            --colors-transport-default-cableway
        );
        --table-transport-rail-color: var(--colors-transport-default-train);
        --table-transport-air-color: var(--colors-transport-default-plane);
        --table-transport-coach-color: var(--colors-transport-default-bus);
        --table-transport-lift-color: var(--colors-transport-default-cableway);
        --table-transport-monorail-color: var(--colors-transport-default-tram);
        --table-transport-trolleybus-color: var(--colors-transport-default-bus);
        --table-transport-unknown-color: var(--colors-transport-default-walk);
        --table-transport-water-color: var(--colors-transport-default-ferry);

        /* Data visualizer colors */
        --data-blue-color: 24, 28, 86;
        --data-coral-color: 255, 89, 89;
        --data-jungle-color: 14, 162, 168;
        --data-azure-color: 47, 152, 250;
        --data-lavender-color: 134, 146, 202;
        --data-peach-color: 202, 130, 91;
        --data-spring-color: 87, 162, 87;
        --data-lilac-color: 142, 87, 227;
    }

    [data-theme='dark'] {
        --main-background-color: var(--colors-misc-black);
        --secondary-background-color: var(--colors-greys-grey);

        --table-header-color: var(--colors-greys-grey50);
        --table-border-color: var(--colors-greys-grey10);
        --table-situation-color: var(--feedback-canary-contrast, #ffe082);
        --table-estimated-time-color: var(--colors-brand-coral);

        /* Rest is same as default theme */
        --tertiary-background-color: var(--colors-blues-blue30);

        --main-text-color: var(--colors-brand-white);
        --secondary-text-color: var(--colors-brand-lavender);

        --highlight-text-color: var(--colors-brand-coral);

        --border-color: var(--colors-brand-lavender);
        --warning-color: var(--colors-validation-lava-contrast);

        --table-header-border-color: var(--colors-blues-blue20);

        --pulse-color: #75daad;

        --table-transport-metro-color: var(--colors-transport-contrast-metro);
        --table-transport-bus-color: var(--colors-transport-contrast-bus);
        --table-transport-tram-color: var(--colors-transport-contrast-tram);
        --table-transport-funicular-color: var(
            --colors-transport-contrast-funicular
        );
        --table-transport-cableway-color: var(
            --colors-transport-contrast-cableway
        );
        --table-transport-rail-color: var(--colors-transport-contrast-train);
        --table-transport-air-color: var(--colors-transport-contrast-plane);
        --table-transport-coach-color: var(--colors-transport-contrast-bus);
        --table-transport-lift-color: var(--colors-transport-contrast-cableway);
        --table-transport-monorail-color: var(--colors-transport-contrast-tram);
        --table-transport-trolleybus-color: var(
            --colors-transport-contrast-bus
        );
        --table-transport-unknown-color: var(--colors-transport-contrast-walk);
        --table-transport-water-color: var(--colors-transport-contrast-ferry);

        /* Data visualizer colors */
        --data-blue-color: 100, 102, 170;
        --data-coral-color: 255, 89, 89;
        --data-jungle-color: 15, 194, 179;
        --data-azure-color: 100, 178, 251;
        --data-lavender-color: 74, 183, 226;
        --data-peach-color: 255, 191, 158;
        --data-spring-color: 123, 192, 11;
        --data-lilac-color: 234, 139, 234;
    }

    [data-theme='entur'] {
        --main-background-color: var(--colors-brand-blue);
        --secondary-background-color: var(--colors-blues-blue10);
        --tertiary-background-color: var(--colors-blues-blue30);

        --main-text-color: var(--colors-brand-white);
        --secondary-text-color: var(--colors-brand-lavender);

        --highlight-text-color: var(--colors-brand-coral);

        --border-color: var(--colors-brand-lavender);
        --table-estimated-time-color: var(--colors-brand-coral);

        --table-border-color: var(--colors-blues-blue30);
        --table-header-border-color: var(--colors-blues-blue20);
        --table-situation-color: var(--colors-validation-canary-contrast);

        --pulse-color: #75daad;

        --table-transport-metro-color: var(--colors-transport-contrast-metro);
        --table-transport-bus-color: var(--colors-transport-contrast-bus);
        --table-transport-tram-color: var(--colors-transport-contrast-tram);
        --table-transport-funicular-color: var(
            --colors-transport-contrast-funicular
        );
        --table-transport-cableway-color: var(
            --colors-transport-contrast-cableway
        );
        --table-transport-rail-color: var(--colors-transport-contrast-train);
        --table-transport-air-color: var(--colors-transport-contrast-plane);
        --table-transport-coach-color: var(--colors-transport-contrast-bus);
        --table-transport-lift-color: var(--colors-transport-contrast-cableway);
        --table-transport-monorail-color: var(--colors-transport-contrast-tram);
        --table-transport-trolleybus-color: var(
            --colors-transport-contrast-bus
        );
        --table-transport-unknown-color: var(--colors-transport-contrast-walk);
        --table-transport-water-color: var(--colors-transport-contrast-ferry);

        /* Datq visualizer colors */
        --data-blue-color: 100, 102, 170;
        --data-coral-color: 255, 89, 89;
        --data-jungle-color: 15, 194, 179;
        --data-azure-color: 100, 178, 251;
        --data-lavender-color: 74, 183, 226;
        --data-peach-color: 255, 191, 158;
        --data-spring-color: 123, 192, 11;
        --data-lilac-color: 234, 139, 234;
    }

    html {
        background-color: var(--main-background-color);
    }

    body {
        color: var(--main-text-color);
        font-family: Nationale, Arial, Gotham Rounded, -apple-system,
            BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell,
            Helvetica Neue, sans-serif;
        font-size: 16px;
        font-weight: 400;
        line-height: 1.2;
        min-height: 100vh;
    }

    h3 {
        font-weight: 500;
    }

    ul {
        list-style-type: none;
    }

    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
        -webkit-appearance: none;
        margin: 0;
    }

    input[type='number'] {
        -moz-appearance: textfield;
        appearance: textfield;
    }
}

@layer components {
    .primaryButton {
        background-color: var(--main-background-color);
    }

    .primaryButton:hover {
        background-color: var(--secondary-background-color);
    }

    .secondaryButton {
        background-color: var(--secondary-background-color);
    }

    .secondaryButton:hover {
        background-color: var(--tertiary-background-color);
    }

    .visuallyHidden {
        clip: rect(0 0 0 0);
        clip-path: inset(50%);
        height: 1px;
        overflow: hidden;
        position: absolute;
        white-space: nowrap;
        width: 1px;
    }

    .box {
        height: 100%;
        width: 100%;
        border-radius: 0.5em;
        padding: 2em;
        background: var(--secondary-background-color);
    }
}

